# serializer version: 1
# name: test_add_bucketed_columns
  list([
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082800ffff',
      'BUCKETED_H3_L11': '8b283082800bfff',
      'BUCKETED_H3_L12': '8c283082800b3ff',
      'BUCKETED_H3_L13': '8d283082800b3bf',
      'BUCKETED_H3_L14': '8e283082800b397',
      'BUCKETED_H3_L15': '8f283082800b390',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308281fffff',
      'BUCKETED_H3_L9': '89283082803ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid1',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082aa6ffff',
      'BUCKETED_H3_L11': '8b283082aa6efff',
      'BUCKETED_H3_L12': '8c283082aa6e1ff',
      'BUCKETED_H3_L13': '8d283082aa6e13f',
      'BUCKETED_H3_L14': '8e283082aa6e11f',
      'BUCKETED_H3_L15': '8f283082aa6e118',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082abfffff',
      'BUCKETED_H3_L9': '89283082aa7ffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7849,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4094,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid2',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082a28ffff',
      'BUCKETED_H3_L11': '8b283082a288fff',
      'BUCKETED_H3_L12': '8c283082a288dff',
      'BUCKETED_H3_L13': '8d283082a288d7f',
      'BUCKETED_H3_L14': '8e283082a288d67',
      'BUCKETED_H3_L15': '8f283082a288d63',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082a3fffff',
      'BUCKETED_H3_L9': '89283082a2bffff',
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7949,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3994,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid3',
    }),
  ])
# ---
# name: test_add_bucketed_columns_neither
  list([
    dict({
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid1',
      'some_other_column': 'value1',
    }),
    dict({
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid2',
      'some_other_column': 'value2',
    }),
  ])
# ---
# name: test_add_bucketed_columns_spatial_only
  list([
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082800ffff',
      'BUCKETED_H3_L11': '8b283082800bfff',
      'BUCKETED_H3_L12': '8c283082800b3ff',
      'BUCKETED_H3_L13': '8d283082800b3bf',
      'BUCKETED_H3_L14': '8e283082800b397',
      'BUCKETED_H3_L15': '8f283082800b390',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308281fffff',
      'BUCKETED_H3_L9': '89283082803ffff',
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid1',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082aa6ffff',
      'BUCKETED_H3_L11': '8b283082aa6efff',
      'BUCKETED_H3_L12': '8c283082aa6e1ff',
      'BUCKETED_H3_L13': '8d283082aa6e13f',
      'BUCKETED_H3_L14': '8e283082aa6e11f',
      'BUCKETED_H3_L15': '8f283082aa6e118',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082abfffff',
      'BUCKETED_H3_L9': '89283082aa7ffff',
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7849,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4094,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid2',
    }),
  ])
# ---
# name: test_add_bucketed_columns_temporal_only
  list([
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid1',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid2',
    }),
  ])
# ---
# name: test_add_quantized_columns_for_h3
  dict({
    'BUCKETED_H3_L0': dtype('O'),
    'BUCKETED_H3_L1': dtype('O'),
    'BUCKETED_H3_L10': dtype('O'),
    'BUCKETED_H3_L11': dtype('O'),
    'BUCKETED_H3_L12': dtype('O'),
    'BUCKETED_H3_L13': dtype('O'),
    'BUCKETED_H3_L14': dtype('O'),
    'BUCKETED_H3_L15': dtype('O'),
    'BUCKETED_H3_L2': dtype('O'),
    'BUCKETED_H3_L3': dtype('O'),
    'BUCKETED_H3_L4': dtype('O'),
    'BUCKETED_H3_L5': dtype('O'),
    'BUCKETED_H3_L6': dtype('O'),
    'BUCKETED_H3_L7': dtype('O'),
    'BUCKETED_H3_L8': dtype('O'),
    'BUCKETED_H3_L9': dtype('O'),
    <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: dtype('float64'),
    <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: dtype('float64'),
    <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: datetime64[ns, UTC],
    <SchemaColumns.UUID_STRING: 'UUID_STRING'>: dtype('O'),
  })
# ---
# name: test_add_quantized_columns_for_h3.1
  list([
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082800ffff',
      'BUCKETED_H3_L11': '8b283082800bfff',
      'BUCKETED_H3_L12': '8c283082800b3ff',
      'BUCKETED_H3_L13': '8d283082800b3bf',
      'BUCKETED_H3_L14': '8e283082800b397',
      'BUCKETED_H3_L15': '8f283082800b390',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308281fffff',
      'BUCKETED_H3_L9': '89283082803ffff',
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_0',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082aa6ffff',
      'BUCKETED_H3_L11': '8b283082aa6efff',
      'BUCKETED_H3_L12': '8c283082aa6e1ff',
      'BUCKETED_H3_L13': '8d283082aa6e13f',
      'BUCKETED_H3_L14': '8e283082aa6e11f',
      'BUCKETED_H3_L15': '8f283082aa6e118',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082abfffff',
      'BUCKETED_H3_L9': '89283082aa7ffff',
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7849,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40939999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082a28ffff',
      'BUCKETED_H3_L11': '8b283082a288fff',
      'BUCKETED_H3_L12': '8c283082a288dff',
      'BUCKETED_H3_L13': '8d283082a288d7f',
      'BUCKETED_H3_L14': '8e283082a288d67',
      'BUCKETED_H3_L15': '8f283082a288d63',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082a3fffff',
      'BUCKETED_H3_L9': '89283082a2bffff',
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.794900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3994,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_2',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283080cce7fff',
      'BUCKETED_H3_L11': '8b283080cce5fff',
      'BUCKETED_H3_L12': '8c283080cce57ff',
      'BUCKETED_H3_L13': '8d283080cce57bf',
      'BUCKETED_H3_L14': '8e283080cce5637',
      'BUCKETED_H3_L15': '8f283080cce5636',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283080fffffff',
      'BUCKETED_H3_L7': '87283080cffffff',
      'BUCKETED_H3_L8': '88283080cdfffff',
      'BUCKETED_H3_L9': '89283080ccfffff',
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8049,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3894,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_3',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283080e86ffff',
      'BUCKETED_H3_L11': '8b283080e86afff',
      'BUCKETED_H3_L12': '8c283080e86a5ff',
      'BUCKETED_H3_L13': '8d283080e86a57f',
      'BUCKETED_H3_L14': '8e283080e86a547',
      'BUCKETED_H3_L15': '8f283080e86a542',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283080fffffff',
      'BUCKETED_H3_L7': '87283080effffff',
      'BUCKETED_H3_L8': '88283080e9fffff',
      'BUCKETED_H3_L9': '89283080e87ffff',
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8149,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.37939999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283080e08ffff',
      'BUCKETED_H3_L11': '8b283080e08bfff',
      'BUCKETED_H3_L12': '8c283080e08bdff',
      'BUCKETED_H3_L13': '8d283080e08bdbf',
      'BUCKETED_H3_L14': '8e283080e08bca7',
      'BUCKETED_H3_L15': '8f283080e08bd8b',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283080fffffff',
      'BUCKETED_H3_L7': '87283080effffff',
      'BUCKETED_H3_L8': '88283080e1fffff',
      'BUCKETED_H3_L9': '89283080e0bffff',
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8249,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3694,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_5',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283081dae7fff',
      'BUCKETED_H3_L11': '8b283081dae3fff',
      'BUCKETED_H3_L12': '8c283081dae3bff',
      'BUCKETED_H3_L13': '8d283081dae3b7f',
      'BUCKETED_H3_L14': '8e283081dae3b5f',
      'BUCKETED_H3_L15': '8f283081dae3b5a',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283080fffffff',
      'BUCKETED_H3_L7': '87283081dffffff',
      'BUCKETED_H3_L8': '88283081dbfffff',
      'BUCKETED_H3_L9': '89283081dafffff',
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.834900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3594,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_6',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283081d64ffff',
      'BUCKETED_H3_L11': '8b283081d64cfff',
      'BUCKETED_H3_L12': '8c283081d64c5ff',
      'BUCKETED_H3_L13': '8d283081d64c4bf',
      'BUCKETED_H3_L14': '8e283081d64c487',
      'BUCKETED_H3_L15': '8f283081d64c485',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283081fffffff',
      'BUCKETED_H3_L7': '87283081dffffff',
      'BUCKETED_H3_L8': '88283081d7fffff',
      'BUCKETED_H3_L9': '89283081d67ffff',
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8449,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3494,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_7',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a2830819527fff',
      'BUCKETED_H3_L11': '8b2830819524fff',
      'BUCKETED_H3_L12': '8c28308195243ff',
      'BUCKETED_H3_L13': '8d283081952427f',
      'BUCKETED_H3_L14': '8e2830819524257',
      'BUCKETED_H3_L15': '8f2830819524273',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283081fffffff',
      'BUCKETED_H3_L7': '872830819ffffff',
      'BUCKETED_H3_L8': '882830819dfffff',
      'BUCKETED_H3_L9': '89283081953ffff',
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8549,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3394,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_8',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283081b8c7fff',
      'BUCKETED_H3_L11': '8b283081b8c5fff',
      'BUCKETED_H3_L12': '8c283081b8c5bff',
      'BUCKETED_H3_L13': '8d283081b8c5abf',
      'BUCKETED_H3_L14': '8e283081b8c5a8f',
      'BUCKETED_H3_L15': '8f283081b8c5a8a',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283081fffffff',
      'BUCKETED_H3_L7': '87283081bffffff',
      'BUCKETED_H3_L8': '88283081b9fffff',
      'BUCKETED_H3_L9': '89283081b8fffff',
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.864900000000006,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.32939999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_9',
    }),
  ])
# ---
# name: test_add_quantized_columns_for_timestamp
  dict({
    'BUCKETED_TIMESTAMP_DAY': datetime64[ns, UTC],
    'BUCKETED_TIMESTAMP_HOUR': datetime64[ns, UTC],
    'BUCKETED_TIMESTAMP_MINUTE': datetime64[ns, UTC],
    'BUCKETED_TIMESTAMP_MONTH': datetime64[ns, UTC],
    'BUCKETED_TIMESTAMP_SECOND': datetime64[ns, UTC],
    'BUCKETED_TIMESTAMP_YEAR': datetime64[ns, UTC],
    <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: dtype('float64'),
    <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: dtype('float64'),
    <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: datetime64[ns, UTC],
    <SchemaColumns.UUID_STRING: 'UUID_STRING'>: dtype('O'),
  })
# ---
# name: test_add_quantized_columns_for_timestamp.1
  list([
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_0',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7849,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40939999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.794900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3994,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_2',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8049,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3894,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_3',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8149,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.37939999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8249,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3694,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_5',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.834900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3594,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_6',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8449,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3494,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_7',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8549,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3394,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_8',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.864900000000006,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.32939999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_9',
    }),
  ])
# ---
# name: test_add_temporal_bucketed_columns
  list([
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid1',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid2',
    }),
  ])
# ---
# name: test_add_temporal_bucketed_columns_with_spatial_data
  list([
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid1',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7849,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4094,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid2',
    }),
  ])
# ---
# name: test_bucket_by_target_column_h3_column_preservation_snapshot
  list([
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082800ffff',
      'BUCKETED_H3_L11': '8b283082800bfff',
      'BUCKETED_H3_L12': '8c283082800b3ff',
      'BUCKETED_H3_L13': '8d283082800b3bf',
      'BUCKETED_H3_L14': '8e283082800b397',
      'BUCKETED_H3_L15': '8f283082800b390',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '872830828ffffff',
      'BUCKETED_H3_L8': '8828308281fffff',
      'BUCKETED_H3_L9': '89283082803ffff',
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_0',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283082aa6ffff',
      'BUCKETED_H3_L11': '8b283082aa6efff',
      'BUCKETED_H3_L12': '8c283082aa6e1ff',
      'BUCKETED_H3_L13': '8d283082aa6e13f',
      'BUCKETED_H3_L14': '8e283082aa6e11f',
      'BUCKETED_H3_L15': '8f283082aa6e118',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283082fffffff',
      'BUCKETED_H3_L7': '87283082affffff',
      'BUCKETED_H3_L8': '88283082abfffff',
      'BUCKETED_H3_L9': '89283082aa7ffff',
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7849,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40939999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283080cce7fff',
      'BUCKETED_H3_L11': '8b283080cce5fff',
      'BUCKETED_H3_L12': '8c283080cce57ff',
      'BUCKETED_H3_L13': '8d283080cce57bf',
      'BUCKETED_H3_L14': '8e283080cce5637',
      'BUCKETED_H3_L15': '8f283080cce5636',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283080fffffff',
      'BUCKETED_H3_L7': '87283080cffffff',
      'BUCKETED_H3_L8': '88283080cdfffff',
      'BUCKETED_H3_L9': '89283080ccfffff',
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8049,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3894,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_3',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283080e86ffff',
      'BUCKETED_H3_L11': '8b283080e86afff',
      'BUCKETED_H3_L12': '8c283080e86a5ff',
      'BUCKETED_H3_L13': '8d283080e86a57f',
      'BUCKETED_H3_L14': '8e283080e86a547',
      'BUCKETED_H3_L15': '8f283080e86a542',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283080fffffff',
      'BUCKETED_H3_L7': '87283080effffff',
      'BUCKETED_H3_L8': '88283080e9fffff',
      'BUCKETED_H3_L9': '89283080e87ffff',
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8149,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.37939999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283081dae7fff',
      'BUCKETED_H3_L11': '8b283081dae3fff',
      'BUCKETED_H3_L12': '8c283081dae3bff',
      'BUCKETED_H3_L13': '8d283081dae3b7f',
      'BUCKETED_H3_L14': '8e283081dae3b5f',
      'BUCKETED_H3_L15': '8f283081dae3b5a',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283080fffffff',
      'BUCKETED_H3_L7': '87283081dffffff',
      'BUCKETED_H3_L8': '88283081dbfffff',
      'BUCKETED_H3_L9': '89283081dafffff',
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.834900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3594,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_6',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a2830819527fff',
      'BUCKETED_H3_L11': '8b2830819524fff',
      'BUCKETED_H3_L12': '8c28308195243ff',
      'BUCKETED_H3_L13': '8d283081952427f',
      'BUCKETED_H3_L14': '8e2830819524257',
      'BUCKETED_H3_L15': '8f2830819524273',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283081fffffff',
      'BUCKETED_H3_L7': '872830819ffffff',
      'BUCKETED_H3_L8': '882830819dfffff',
      'BUCKETED_H3_L9': '89283081953ffff',
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8549,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3394,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_8',
    }),
    dict({
      'BUCKETED_H3_L0': '8029fffffffffff',
      'BUCKETED_H3_L1': '81283ffffffffff',
      'BUCKETED_H3_L10': '8a283081b8c7fff',
      'BUCKETED_H3_L11': '8b283081b8c5fff',
      'BUCKETED_H3_L12': '8c283081b8c5bff',
      'BUCKETED_H3_L13': '8d283081b8c5abf',
      'BUCKETED_H3_L14': '8e283081b8c5a8f',
      'BUCKETED_H3_L15': '8f283081b8c5a8a',
      'BUCKETED_H3_L2': '822837fffffffff',
      'BUCKETED_H3_L3': '832830fffffffff',
      'BUCKETED_H3_L4': '8428309ffffffff',
      'BUCKETED_H3_L5': '85283083fffffff',
      'BUCKETED_H3_L6': '86283081fffffff',
      'BUCKETED_H3_L7': '87283081bffffff',
      'BUCKETED_H3_L8': '88283081b9fffff',
      'BUCKETED_H3_L9': '89283081b8fffff',
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.864900000000006,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.32939999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_9',
    }),
  ])
# ---
# name: test_bucket_by_target_column_simple_data_snapshot
  list([
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.77,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.42,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
      'category': 'A',
      'value': 10,
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.78,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.43,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_2',
      'category': 'B',
      'value': 20,
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_TRACKPOINT: 'GPX_TRACKPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.79,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.44,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
      'category': 'C',
      'value': 40,
    }),
  ])
# ---
# name: test_bucket_by_target_column_temporal_column_preservation_snapshot
  list([
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_0',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7849,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40939999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.794900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3994,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_2',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8049,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3894,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_3',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8149,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.37939999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8249,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3694,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 15:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_5',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.834900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3594,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 16:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_6',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8449,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3494,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 17:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_7',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.8549,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.3394,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 18:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_8',
    }),
    dict({
      'BUCKETED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_HOUR': Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_SECOND': Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      'BUCKETED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.864900000000006,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.32939999999999,
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 19:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_9',
    }),
  ])
# ---
# name: test_filter_df_to_selected_buckets_snapshot
  list([
    dict({
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.77,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.42,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
      'category': 'A',
      'value': 10,
    }),
    dict({
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.77,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.42,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_3',
      'category': 'A',
      'value': 30,
    }),
    dict({
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_TRACKPOINT: 'GPX_TRACKPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.79,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.44,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
      'category': 'C',
      'value': 40,
    }),
  ])
# ---
# name: test_get_optimal_temporal_level
  dict({
    1: <TemporalLevel.DAY: 'DAY'>,
    2: <TemporalLevel.DAY: 'DAY'>,
    3: <TemporalLevel.HOUR: 'HOUR'>,
    4: <TemporalLevel.HOUR: 'HOUR'>,
    5: <TemporalLevel.HOUR: 'HOUR'>,
    6: <TemporalLevel.HOUR: 'HOUR'>,
    7: <TemporalLevel.HOUR: 'HOUR'>,
    8: <TemporalLevel.HOUR: 'HOUR'>,
    9: <TemporalLevel.HOUR: 'HOUR'>,
    10: <TemporalLevel.HOUR: 'HOUR'>,
    100: <TemporalLevel.HOUR: 'HOUR'>,
    1000: <TemporalLevel.MINUTE: 'MINUTE'>,
    5000: <TemporalLevel.MINUTE: 'MINUTE'>,
    10000: None,
  })
# ---
# name: test_thad_bucket_with_groupby
  list([
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 2,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.77,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.42,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
      'category': 'A',
      'value': 10,
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_WAYPOINT: 'GPX_WAYPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.78,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.43,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_2',
      'category': 'B',
      'value': 20,
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_TRACKPOINT: 'GPX_TRACKPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.79,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.44,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
      'category': 'C',
      'value': 40,
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1,
      <SchemaColumns.DATA_TYPE: 'DATA_TYPE'>: <DataType.GPX_TRACKPOINT: 'GPX_TRACKPOINT'>,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.78,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.43,
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_5',
      'category': 'B',
      'value': 50,
    }),
  ])
# ---
